project(wikipedia_topfschlagen)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
cmake_minimum_required(VERSION 2.8)
add_subdirectory (database)
add_subdirectory (Tree)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} -lxerces-c DatabaseWrapper Treelibrary)
